set html to overflow-x hidden as bug fix

--- a/src/App.css
+++ b/src/App.css
@@ -63,7 +63,7 @@ html{
   box-sizing: border-box;
   font-size: 16px;
   font-family: Helvetica, Arial, sans-serif;
-  
+  overflow-x: hidden;
 }
 
 body{
@@ -407,7 +407,7 @@ menu ul li a.active {
     display: flex;
     justify-content: left;
     margin: 30px auto 60px auto;
-    max-width: 100%;
+    max-width: 600px;
     border: solid 1px var(--prime-color);
     border-radius: 50px;
     overflow: hidden;
